# mini2440

./: Makefile  README.md
arm-qtopia/konq/: Makefile.am  Makefile.am.in  Makefile.cvs  Makefile.in  acinclude.m4  aclocal.m4  config.h.bot  config.h.in  configure  configure.files  configure.in  configure.in.in  subdirs
arm-qtopia/konq/admin/: acinclude.m4.in  am_edit
arm-qtopia/konq/autom4te.cache/: output.0  traces.0
arm-qtopia/konq/konq-embed/: AUTHORS  ChangeLog  HACKS  Makefile.am  Makefile.cvs  Makefile.in  README  README.win32  TODO  VERSION  configure.in.in  khtmlrc  konq.pro  prepare_kde_src  qconfig-local-qpe-konqe.h
arm-qtopia/konq/konq-embed/add-ons/: Makefile.am  Makefile.in  configure.in.in
arm-qtopia/konq/konq-embed/add-ons/jsdebug/: Makefile.am  Makefile.in  jsdebug.cpp  konqe_info
arm-qtopia/konq/konq-embed/add-ons/kflashpart/: Makefile.am  Makefile.in  kflashpart.cpp  kflashpart.desktop  kflashpart.h  kflashpart.rc  kflashplay.cpp  kflashplay.desktop  kflashplay.h  kflashplay.rc  konqe_info  main.cpp
arm-qtopia/konq/konq-embed/add-ons/kplaintext/: Makefile.am  Makefile.in  konqe_info  kplaintext_part.cpp  kplaintext_part.h  kplaintextpart.desktop  kplaintextpart.rc
arm-qtopia/konq/konq-embed/add-ons/ksimplesound/: Makefile.am  Makefile.in  konqe_info  ksimplesound.cpp  ksimplesound.desktop  ksimplesound.h  ksimplesound.rc
arm-qtopia/konq/konq-embed/add-ons/pppdialer/: Makefile.am  Makefile.in  chat.SAMPLE  dialer.SAMPLE  dialer.cpp  dialer.h  dialer.ui  konqe_info  options.SAMPLE  peer.SAMPLE  pppdialer.cpp  pppdialer.h
arm-qtopia/konq/konq-embed/dropin/: Makefile.am  Makefile.in  configure.in.in  dcopclient.cpp  dcopclient.h  dcopdispatcher.cpp  dcopdispatcher.h  dcopobject.cpp  dcopobject.h  fakes.cpp  jsextconnect.h  jsextension.cpp  jsextension.h  kaboutdata.h  kaction.cpp  kaction.h  kapp.cpp  kapp.h  kbuttonbox.cpp  kbuttonbox.h  kcharsets.cpp  kcmdlineargs.cpp  kcmdlineargs.h  kcombobox.cpp  kcombobox.h  kcompletionbox.h  kconfig.cpp  kconfig.h  kcursor.h  kdebug.cpp  kdebug.h  kdialog.cpp  kdialogbase.cpp  kdummyprinter.h  keditcl.h  kfiledialog.cpp  kfiledialog.h  kfontdatabase.h  kglobal.cpp  kglobal.h  (+33 more)
arm-qtopia/konq/konq-embed/dropin/khtml/: Makefile.am  Makefile.in  khtml_ext.cpp  khtml_ext.h  khtml_find.h  khtml_run.cpp  khtml_run.h
arm-qtopia/konq/konq-embed/dropin/kio/: Makefile.am  Makefile.in  authcache.cpp  authcache.h  authcache_skel.cpp  configure.in.in  global.cpp  job.cpp  job.h  jobclasses.cpp  jobclasses.h  kfileitem.h  kimageio.h  kio_file.cpp  kio_file.h  kio_ftp.cpp  kio_ftp.h  kmimemagic.cpp  kmimemagic.h  kmimetype.cpp  kmimetype.h  kprotocolmanager.cpp  kprotocolmanager.h  krun.cpp  krun.h  ktrader.cpp  ktrader.h  launcher.cpp  launcher.h  mimehandler.cpp  mimehandler.h  netaccess.cpp  netaccess.h  observer.cpp  observer.h  passdlg.cpp  passdlg.h  scheduler.cpp  scheduler.h  slave.cpp  (+7 more)
arm-qtopia/konq/konq-embed/dropin/kparts/: Makefile.am  Makefile.in  browserinterface.h  historyprovider.cpp  historyprovider.h  part.cpp  part.h  part_rw.cpp  part_rw.h
arm-qtopia/konq/konq-embed/dropin/kssl/: Makefile.am  Makefile.in  configure.in.in  kopenssl.cpp  ksslinfodlg.cpp  ksslinfodlg.h
arm-qtopia/konq/konq-embed/helpers/cgi/: cgiparam
arm-qtopia/konq/konq-embed/helpers/filters/: ppt2html  rtf2html  tbzfilter  tbzlist  text2html  tgzfilter  tgzlist  tsv2html  xls2html  zipfilter  ziplist
arm-qtopia/konq/konq-embed/helpers/protocols/: cache  data
arm-qtopia/konq/konq-embed/ipkg/: Makefile.am  Makefile.in  configure.in.in  control.in  konq-embedrc.in  konqe-build  mkipkg  preinst.in
arm-qtopia/konq/konq-embed/kdesrc/: Makefile.am  Makefile.in
arm-qtopia/konq/konq-embed/kdesrc/kdecore/: Makefile.am  Makefile.in  charset_unicode_patch.txt  configure.in.in  kasyncio.h  kbufferedio.cpp  kbufferedio.h  kcharsets.cpp  kcharsets.h  kdeversion.h  kentities.c  kextsock.cpp  kextsock.h  krfcdate.cpp  ksharedptr.h  ksock.cpp  ksock.h  ksockaddr.cpp  ksockaddr.h  kstddirs.cpp  kstddirs.h  ktempfile.cpp  kurl.h  netsupp.cpp  netsupp.h
arm-qtopia/konq/konq-embed/kdesrc/khtml/: Makefile.am  Makefile.in  ecma_nowindowchanges.txt  khtml_jsextend_patch.txt  khtml_part.cpp  khtml_part.h  khtml_scaling_patch.txt  khtml_settings.cc  khtml_settings.h
arm-qtopia/konq/konq-embed/kdesrc/kio/: Makefile.am  Makefile.in  connection.cpp  connection.h  ftp.cc  ftp.h  global.h  slaveconfig.h  tcpslavebase.cpp  tcpslavebase.h
arm-qtopia/konq/konq-embed/kdesrc/kjs/: Makefile.am  Makefile.in
arm-qtopia/konq/konq-embed/kdesrc/kparts/: Makefile.am  Makefile.in
arm-qtopia/konq/konq-embed/kdesrc/kssl/: Makefile.am  Makefile.in  kssld_skel.cpp
arm-qtopia/konq/konq-embed/src/: Makefile.am  Makefile.in  bookmarkedit.cc  bookmarkedit.h  bookmarkedit.ui  bookmarkeditbase.cc  bookmarkeditbase.h  bookmarkeditimpl.cc  bookmarkeditimpl.h  bookmarkeditor.cc  bookmarkeditor.h  bookmarkeditor.ui  bookmarkeditorimpl.cc  bookmarkeditorimpl.h  bookmarks.cc  bookmarks.h  browseriface.cc  browseriface.h  configure.in.in  defaults.h  htmlview.cc  htmlview.h  konqplugininterface.h  konqueror.desktop  main.cc  mainwindebug.cc  mainwindow_kiosk.cc  mainwindow_kiosk.h  mainwindow_qpe.cc  mainwindow_qpe.h  mainwindow_x11.cc  mainwindow_x11.h  mainwindowbase.cc  mainwindowbase.h  popuphandler.cc  popuphandler.h  preferences.cc  preferences.h  preferences.ui  preferencesimpl.cc  (+7 more)
arm-qtopia/konq/konq-embed/src/actions/: Makefile.am  Makefile.in  configure.in.in  konqe.rc.in
arm-qtopia/konq/konq-embed/src/pics/: back.xpm  bar_close.xpm  bookmark.xpm  bookmark_add.xpm  close.xpm  (+16 more)
arm-qtopia/konq/konq-embed/tools/: Makefile.am  Makefile.in  qstart.cc  shp.c  shp.txt
arm-qtopia/konq/konq-embed/win32/: autolock.h  channel.cpp  channel.h  config.h  connection.cpp  connection.h  dcopclient.cpp  dcopdispatcher.cpp  dirent.h  fixmocfiles.zsh  ksock.h  launcher.cpp  netdb.h  pcre.pro  pcreposix.pro  pipe.cpp  pipe.h  pwd.h  regex.h  resolv.h  resolver.cpp  resolver.h  syslog.h  tcpslavebase.cpp  tcpslavebase.h  unistd.h  unixhacks.cpp  utime.h  win32prepare.sh
(+476 files in other folders)
